<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.spacecraft.SelectSpacecraftActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pointsDistributed_layout"
        android:layout_width="0dp"
        android:layout_height="75dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/pointsDistributed_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pointsDistributed"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textColor="@android:color/black"
            android:layout_marginEnd="50dp"
            android:fontFamily="casual"/>

        <TextView
            android:id="@+id/pointsDistributedValue_textview"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:background="@drawable/corner_rectangel_bg"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/pointsDistributed_textview"
            android:text="15"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:fontFamily="casual"/>

        <TextView
            android:id="@+id/pointsDistributed_layout_underline"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/pointsDistributed_layout"
        app:layout_constraintBottom_toTopOf="@+id/continue_button"
        android:layout_margin="20dp">

        <EditText
            android:id="@+id/spacecraftName_edittext"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="20dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/corner_rectangel_bg"
            android:maxLines="1"
            android:hint="@string/enterSpaceName"
            android:paddingStart="10dp"
            android:textColor="@android:color/black"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/spacecraftName_edittext"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="20dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/two">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center"
                    android:text="@string/enterDurability"
                    android:textColor="@android:color/black"
                    android:fontFamily="casual"
                    android:textStyle="bold"
                    android:textSize="21sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/durability_slider"/>
                <com.google.android.material.slider.Slider
                    android:id="@+id/durability_slider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:valueFrom="0"
                    android:stepSize="1"
                    app:thumbColor="@android:color/black"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/one"
                app:layout_constraintBottom_toTopOf="@+id/three">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center"
                    android:text="@string/enterSpeed"
                    android:textColor="@android:color/black"
                    android:fontFamily="casual"
                    android:textStyle="bold"
                    android:textSize="21sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/speed_slider"/>
                <com.google.android.material.slider.Slider
                    android:id="@+id/speed_slider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:valueFrom="0"
                    android:stepSize="1"
                    app:thumbColor="@android:color/black"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/two">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center"
                    android:text="@string/enterCapasity"
                    android:textColor="@android:color/black"
                    android:fontFamily="casual"
                    android:textStyle="bold"
                    android:textSize="21sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/capacity_slider"/>
                <com.google.android.material.slider.Slider
                    android:id="@+id/capacity_slider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:valueFrom="0"
                    android:stepSize="1"
                    app:thumbColor="@android:color/black"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/continue_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:backgroundTint="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"
        android:elevation="10dp"
        android:text="@string/continueButton"
        android:textColor="@android:color/white"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textSize="17sp"
        android:textAllCaps="false"/>
</androidx.constraintlayout.widget.ConstraintLayout>